--- a/package.json
+++ b/package.json
@@ -1,3 +1,20 @@
 {
-
+  "name":"modern-nations-diplomacy",
+  "version":"0.1.0",
+  "engines": {
+    "node": "0.11.14"
+  },
+  "dependencies": {
+    "express": "4.9.5",
+    "body-parser": "1.9.0",
+    "compression": "1.1.0",
+    "cors": "2.4.2",
+    "mongoose": "3.8.17",
+    "morgan": "1.3.2",
+    "multer": "0.1.4",
+    "errorhandler": "1.2.0",
+    "password-hash": "1.2.2",
+    "lodash": "3.3.1",
+    "q": "1.0.1"
+  }
 }
