--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name":"modern-nations-diplomacy",
-  "version":"0.1.0",
+  "name": "modern-nations-diplomacy",
+  "version": "0.1.0",
   "engines": {
     "node": "0.11.14"
   },
   "dependencies": {
-    "express": "4.9.5",
     "body-parser": "1.9.0",
     "compression": "1.1.0",
     "cors": "2.4.2",
+    "cron": "1.0.9",
+    "errorhandler": "1.2.0",
+    "express": "4.9.5",
+    "lodash": "3.3.1",
     "mongoose": "3.8.24",
     "morgan": "1.3.2",
     "multer": "0.1.4",
-    "errorhandler": "1.2.0",
-    "lodash": "3.3.1",
-    "q": "1.0.1"
+    "q": "1.0.1",
+    "restler": "3.2.2"
   }
 }
